feat: added block / unblock user and blocked users page

--- a/src/app/blocked-users/Page.module.scss
+++ b/src/app/blocked-users/Page.module.scss
@@ -4,6 +4,11 @@
 .main {
 	@include page();
 	padding-bottom: 0;
+	.content {
+		height: calc(100vh - 4rem - 1px);
+		border: 1px solid $heather;
+		border-top: 0;
+	}
 	.noBlocksMessage {
 		display: flex;
 		align-items: center;
@@ -11,8 +16,5 @@
 		font-size: $fontSizeLg;
 		padding: 20px;
 		text-align: center;
-		height: calc(100vh - 4rem - 1px);
-		border: 1px solid $heather;
-		border-top: 0;
 	}
 }
