--- a/src/app/components/posts/post-feed/PostFeed.module.scss
+++ b/src/app/components/posts/post-feed/PostFeed.module.scss
@@ -8,7 +8,7 @@
 	height: 100%;
 	min-height: calc(100vh - 50px);
 	display: block;
-	border: 1px solid $heather;
+	// border: 1px solid $heather;
 	border-top: none;
 
 	@include breakpoint(xs) {
