fix: fixed post menu options

--- a/src/app/components/posts/post-card/post-card-footer/PostCardFooter.module.scss
+++ b/src/app/components/posts/post-card/post-card-footer/PostCardFooter.module.scss
@@ -24,12 +24,12 @@
 			color: $comet;
 		}
 		.bookmarked {
-			fill: $chetwodeBlue;
-			color: $chetwodeBlue;
+			fill: #ff304f;
+			color: #ff304f;
 		}
 		.liked {
-			fill: #20b46a;
-			color: #20b46a;
+			fill: #2f89fc;
+			color: #2f89fc;
 		}
 	}
 
