--- a/src/app/components/user/user-feed/UserFeed.module.scss
+++ b/src/app/components/user/user-feed/UserFeed.module.scss
@@ -34,4 +34,14 @@
 			}
 		}
 	}
+
+	.noResultsMessage {
+		width: 100%;
+		height: calc(100vh - 4rem - 55px);
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-weight: 500;
+	}
 }
