--- a/src/app/components/post-preview/PostPreview.module.scss
+++ b/src/app/components/post-preview/PostPreview.module.scss
@@ -1,7 +1,8 @@
 @use '../../styles/variables' as *;
 
 .postPreview {
-	width: 100%;
+	width: calc(100% - 20px);
+	margin: 0 auto;
 	height: fit-content;
 	max-height: 300px;
 	padding: 10px;
