--- a/src/app/components/text-input/create-comment/CreateComment.module.scss
+++ b/src/app/components/text-input/create-comment/CreateComment.module.scss
@@ -2,7 +2,8 @@
 
 .createComment {
 	background-color: $white;
-	width: 100%;
+	width: calc(100% - 20px);
+	margin: 0 auto;
 	min-height: 175px;
 	height: auto;
 	border-radius: 4px;
@@ -112,6 +113,7 @@
 
 .postButton {
 	margin-top: 15px;
+	padding: 0 10px;
 	button {
 		position: unset !important;
 		margin-left: auto;
