--- a/src/app/components/user/login/Login.module.scss
+++ b/src/app/components/user/login/Login.module.scss
@@ -41,7 +41,7 @@
 			p {
 				font-size: 16px;
 				span {
-					color: lightgray;
+					color: $chetwodeBlue;
 					font-weight: 500;
 				}
 			}
@@ -53,7 +53,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			font-size: $fontSizeSm;
+			font-size: $fontSizeMd;
 			padding: 12px 10px;
 			margin-bottom: 1rem;
 			border-radius: 4px;
@@ -77,7 +77,7 @@
 				a {
 					text-decoration: none;
 					font-size: 14px;
-					color: #9baec8;
+					color: $chetwodeBlue;
 					&:hover {
 						text-decoration: underline;
 					}
