--- a/src/app/components/user/signup/Signup.module.scss
+++ b/src/app/components/user/signup/Signup.module.scss
@@ -36,7 +36,7 @@
 			p {
 				font-size: 16px;
 				span {
-					color: lightgray;
+					color: $chetwodeBlue;
 					font-weight: 500;
 				}
 			}
@@ -48,7 +48,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			font-size: $fontSizeSm;
+			font-size: $fontSizeMd;
 			padding: 12px 10px;
 			margin-bottom: 1rem;
 			border-radius: 4px;
@@ -61,8 +61,11 @@
 			flex-direction: column;
 			gap: 1rem;
 			a {
-				color: lightgray;
+				color: $charade;
 				font-size: $fontSizeMd;
+			}
+			button {
+				margin-top: 10px;
 			}
 			.footer {
 				display: flex;
@@ -70,11 +73,11 @@
 				padding: 10px 0;
 				text-decoration: none;
 				font-size: 14px;
-				color: #9baec8;
+				color: $charade;
 				a {
 					text-decoration: none;
 					font-size: 14px;
-					color: #9baec8;
+					color: $chetwodeBlue;
 					&:hover {
 						text-decoration: underline;
 					}
