--- a/src/app/components/sportsbook/match-card/MatchCard.module.scss
+++ b/src/app/components/sportsbook/match-card/MatchCard.module.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/variables' as *;
+@use '../../../styles/breakpoints' as *;
 
 .match {
 	padding: 1rem 1rem;
@@ -18,6 +19,9 @@
 			position: absolute;
 			content: '';
 			z-index: 999;
+			@include breakpoint(xs) {
+				display: none;
+			}
 		}
 	}
 
