--- a/src/app/components/user/user-feed/UserFeed.module.scss
+++ b/src/app/components/user/user-feed/UserFeed.module.scss
@@ -10,7 +10,7 @@
 		display: flex;
 		padding: 20px 15px;
 		gap: 10px;
-		border-bottom: 1px solid $alabaster;
+		border-bottom: 1px solid $heather;
 		&:hover {
 			cursor: pointer;
 			.displayName {
