wip: editing styles

--- a/src/app/create-post/Page.module.scss
+++ b/src/app/create-post/Page.module.scss
@@ -11,7 +11,7 @@
 		height: calc(100vh - 4rem - 1px);
 		.userHeader {
 			display: flex;
-			padding: 2rem 0;
+			padding: 2rem 10px;
 			gap: 10px;
 			.displayName {
 				display: flex;
