--- a/src/app/components/sportsbook/match-details/breakdown/Breakdown.module.scss
+++ b/src/app/components/sportsbook/match-details/breakdown/Breakdown.module.scss
@@ -6,9 +6,9 @@
 	flex-direction: column;
 	gap: 10px;
 
-	border: 1px solid $heather;
-	border-top: none;
-	border-bottom: none;
+	// border: 1px solid $heather;
+	// border-top: none;
+	// border-bottom: none;
 	.description {
 		font-size: $fontSizeMd;
 		border-radius: 4px;
