--- a/src/app/components/sportsbook/match-details/chance-to-win/ChanceToWin.module.scss
+++ b/src/app/components/sportsbook/match-details/chance-to-win/ChanceToWin.module.scss
@@ -6,7 +6,7 @@
 	flex-direction: column;
 	gap: 10px;
 	padding-top: 2rem;
-	border: 1px solid $heather;
+	// border: 1px solid $heather;
 	border-top: none;
 	.title {
 		font-size: 22px;
