--- a/src/app/components/sportsbook/match-details/feed-toggle/FeedToggle.module.scss
+++ b/src/app/components/sportsbook/match-details/feed-toggle/FeedToggle.module.scss
@@ -8,5 +8,5 @@
 	align-items: center;
 	text-transform: uppercase;
 	padding: 0 1rem;
-	border-top: 1px solid $heather;
+	// border-top: 1px solid $heather;
 }
