--- a/src/app/components/sportsbook/match-details/match-header/MatchHeader.module.scss
+++ b/src/app/components/sportsbook/match-details/match-header/MatchHeader.module.scss
@@ -5,8 +5,8 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	border: 1px solid $heather;
-	border-top: none;
+	// border: 1px solid $heather;
+	// border-top: none;
 	.status {
 		width: 200px;
 		display: flex;
