--- a/src/app/components/feed-header/FeedHeader.module.scss
+++ b/src/app/components/feed-header/FeedHeader.module.scss
@@ -4,7 +4,7 @@
 .feedHeader {
 	font-weight: 500;
 	position: sticky;
-	top: 0px;
+	top: $gamebarHeight;
 	z-index: 2;
 	padding-top: 20px;
 	transition: all 100ms ease-in-out;
@@ -18,6 +18,7 @@
 	@include breakpoint(xs) {
 		padding-top: 0;
 		top: 0;
+		background-color: $darkerMystic;
 	}
 	.header {
 		background-color: lighten($white, 7%);
