--- a/src/app/components/feed/feed-header/FeedHeader.module.scss
+++ b/src/app/components/feed/feed-header/FeedHeader.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/variables' as *;
-@use '../../styles/breakpoints' as *;
+@use '../../../styles/variables' as *;
+@use '../../../styles/breakpoints' as *;
 
 .feedHeader {
 	font-weight: 500;
