--- a/src/app/components/feed/feed-header/FeedHeader.module.scss
+++ b/src/app/components/feed/feed-header/FeedHeader.module.scss
@@ -9,6 +9,7 @@
 	padding-top: 20px;
 	transition: all 100ms ease-in-out;
 	background-color: $mystic;
+
 	@include breakpoint(sm) {
 		background-color: $darkerMystic;
 		padding-top: 0;
@@ -26,6 +27,8 @@
 		border: 1px solid $heather;
 		border-top-right-radius: 4px;
 		border-top-left-radius: 4px;
+		display: flex;
+		align-items: center;
 		@include breakpoint(sm) {
 			border-top: 0;
 			border-radius: 0;
@@ -52,13 +55,12 @@
 				max-width: 20px;
 				max-height: 20px;
 				border-radius: 50% !important;
-				border: 1px solid $charade;
-			}
-			@include breakpoint(xs) {
-				display: flex;
 			}
 			@include breakpoint(sm) {
 				display: none;
+			}
+			@include breakpoint(xs) {
+				display: flex;
 			}
 			strong {
 				color: $charade;
@@ -78,6 +80,20 @@
 			}
 			svg {
 				margin-left: 10px;
+			}
+		}
+
+		.controls {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			margin-left: auto;
+			position: relative;
+			cursor: pointer;
+			padding: 2px;
+			border-radius: 4px;
+			&:hover {
+				background-color: darken($white, 5%);
 			}
 		}
 
