--- a/src/app/components/user/auth/Auth.module.scss
+++ b/src/app/components/user/auth/Auth.module.scss
@@ -7,7 +7,7 @@
 	.message {
 		padding-top: 1.2rem;
 		font-size: 12px;
-		color: lightgray;
+		color: $charade;
 		padding: 10px 0;
 		margin-top: 1rem;
 	}
