feat: added notifications page & font awesome icons

--- a/src/app/components/feed/feed-header/FeedHeader.module.scss
+++ b/src/app/components/feed/feed-header/FeedHeader.module.scss
@@ -92,6 +92,9 @@
 			cursor: pointer;
 			padding: 2px;
 			border-radius: 4px;
+			@include breakpoint(xs) {
+				display: none;
+			}
 			&:hover {
 				background-color: darken($white, 5%);
 			}
