fix: added scrollable gamebar

--- a/src/app/components/gamebar/Gamebar.module.scss
+++ b/src/app/components/gamebar/Gamebar.module.scss
@@ -26,6 +26,10 @@
 		@include breakpoint(xs) {
 			background-color: $white;
 			position: relative;
+			overflow-x: auto;
+			&::-webkit-scrollbar {
+				display: none;
+			}
 		}
 
 		.content {
