--- a/src/app/bookmarks/[username]/Page.module.scss
+++ b/src/app/bookmarks/[username]/Page.module.scss
@@ -21,3 +21,12 @@
 		min-height: calc(100vh - 4rem - 1px);
 	}
 }
+
+.loading {
+	@include page();
+	padding-bottom: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 1px solid $heather;
+}
