--- a/src/app/sportsbook/Page.module.scss
+++ b/src/app/sportsbook/Page.module.scss
@@ -5,3 +5,12 @@
 	@include page();
 	padding-bottom: 0;
 }
+
+.loading {
+	@include page();
+	padding-bottom: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 1px solid $heather;
+}
