--- a/src/app/sportsbook/[matchId]/Page.module.scss
+++ b/src/app/sportsbook/[matchId]/Page.module.scss
@@ -9,4 +9,12 @@
 		border-top: 0;
 		padding-bottom: 2rem;
 	}
+	.loading {
+		padding-bottom: 0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		border: 1px solid $heather;
+		height: calc(100vh - 3rem - 1px);
+	}
 }
