--- a/src/app/styles/App.module.scss
+++ b/src/app/styles/App.module.scss
@@ -1,5 +1,6 @@
 @use './variables' as *;
 @use './breakpoints' as *;
+@use './mixins' as *;
 
 .app {
 	background-color: $mystic;
@@ -23,4 +24,14 @@
 			min-width: 100vw;
 		}
 	}
+}
+
+.loading {
+	@include page();
+	padding-bottom: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 1px solid $heather;
+	width: 600px;
 }
