--- a/src/app/user/[username]/Page.module.scss
+++ b/src/app/user/[username]/Page.module.scss
@@ -19,3 +19,11 @@
 		}
 	}
 }
+
+.loading {
+	@include page();
+	padding-bottom: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
