--- a/src/app/components/sportsbook/match-details/chance-to-win/ChanceToWin.module.scss
+++ b/src/app/components/sportsbook/match-details/chance-to-win/ChanceToWin.module.scss
@@ -9,7 +9,8 @@
 	// border: 1px solid $heather;
 	border-top: none;
 	.title {
-		font-size: 22px;
+		font-size: 20px;
+		text-transform: uppercase;
 	}
 	.description {
 		font-size: $fontSizeMd;
