--- a/src/app/components/sportsbook/match-card/MatchCard.module.scss
+++ b/src/app/components/sportsbook/match-card/MatchCard.module.scss
@@ -56,6 +56,7 @@
 				strong {
 					font-weight: 500;
 					font-size: $fontSizeMd;
+					text-transform: uppercase;
 				}
 				span {
 					font-size: $fontSizeXs;
@@ -72,6 +73,7 @@
 				padding-top: 10px;
 				display: flex;
 				gap: 10px;
+				text-transform: uppercase;
 			}
 		}
 		.rightSide {
