--- a/src/app/components/nav/Nav.module.scss
+++ b/src/app/components/nav/Nav.module.scss
@@ -40,6 +40,13 @@
 				position: absolute;
 				top: 13px;
 			}
+			.iconWrapper {
+				width: 16px;
+				height: 16px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
 			svg {
 				font-size: 16px;
 				color: lighten($charade, 15%);
