feat: added tagging users for comments

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -7,7 +7,7 @@ $charade: #282c37;
 $alabaster: #f7f7f7;
 $white: #ffffff;
 $mystic: #eff3f5;
-$chetwodeBlue: #7289da;
+$chetwodeBlue: #4a4de7;
 $heather: #c0cdd9;
 $darkMystic: #e6ebf0;
 $darkerMystic: #d9e1e8;
