--- a/src/app/components/posts/post-card/post-card-bet/PostCardBet.module.scss
+++ b/src/app/components/posts/post-card/post-card-bet/PostCardBet.module.scss
@@ -1,57 +1,75 @@
 @use '@/app/styles/variables' as *;
 
 .betContainer {
-	padding: 10px 1rem;
-	background-color: $alabaster;
+	background-color: $white;
 	border: 1px solid $heather;
 	width: 100%;
-	border-radius: 4px;
-	.bet {
+	border-radius: 8px;
+	display: flex;
+	flex-direction: column;
+	font-size: $fontSizeLg;
+
+	.top {
 		display: flex;
-		flex-direction: column;
-		gap: 10px;
-		font-size: $fontSizeMd;
-		position: relative;
-		.displayName {
+		flex: 1;
+		padding: 10px;
+
+		.bet {
 			display: flex;
 			align-items: center;
-			gap: 5px;
-		}
-		.type {
-			display: flex;
-			gap: 5px;
-		}
-		.wager {
-			display: flex;
 			gap: 10px;
-			strong {
-				color: #20b46a;
+			.logo {
+				width: fit-content;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+			.betInfo {
+				width: 100%;
+				display: flex;
+				flex-direction: column;
+
+				strong {
+					font-weight: 600;
+				}
+				span {
+					color: gray;
+					font-weight: 500;
+				}
 			}
 		}
 		.odds {
-			background-color: lighten($white, 15%);
-			border: 1px solid $heather;
-			padding: 8px 20px;
-			border-radius: 4px;
-			font-weight: 600;
+			height: 50px;
 			margin-left: auto;
-			width: 60px;
 			display: flex;
-			align-items: center;
+			align-items: flex-end;
 			justify-content: center;
-			color: #20b46a;
-			position: absolute;
-			right: 0;
-			top: 0;
-			font-size: $fontSizeLg;
-		}
-		.description {
-			font-style: italic;
-		}
-		a {
-			color: $charade;
+			flex-direction: column;
+			width: 55px;
+			strong {
+				color: $chetwodeBlue;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+			span {
+				font-weight: 400;
+			}
 		}
 	}
+
+	.bottom {
+		background: rgba(144, 166, 223, 0.1);
+		border-top: 1px solid rgba(144, 166, 223, 0.5);
+		height: 45px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 0 10px;
+		font-weight: 500;
+		color: $chetwodeBlue;
+	}
+
 	.disclaimer {
 		font-size: 10px;
 		width: 100%;
