--- a/src/app/components/modals/Modal.module.scss
+++ b/src/app/components/modals/Modal.module.scss
@@ -11,7 +11,6 @@
 	position: fixed;
 	max-width: 500px;
 	min-width: 500px;
-	padding: 1rem;
 	border-radius: 4px;
 	background-color: $white;
 	color: $charade;
@@ -26,22 +25,44 @@
 	.header {
 		width: 100%;
 		display: flex;
-		justify-content: flex-end;
+		justify-content: space-between;
+		background-color: darken($white, 5%);
+		padding: 1rem;
+		align-items: center;
+
+		strong {
+			font-size: 18px;
+			font-weight: 500;
+		}
 		svg {
 			cursor: pointer;
 		}
 	}
+	.bodyContent {
+		padding: 1rem;
+	}
 	.footer {
 		display: flex;
 		align-items: center;
-		height: 50px;
 		width: 100%;
+		gap: 10px;
+		padding: 1rem;
+
 		button {
 			height: 45px;
 			font-size: $fontSizeLg !important;
 			font-weight: 600;
+			flex: 1;
+			outline: 1px solid $chetwodeBlue;
+			background-color: lighten($chetwodeBlue, 5%);
+
+			&:nth-of-type(1) {
+				background-color: $white;
+				color: $chetwodeBlue;
+			}
 			&:hover {
 				background-color: lighten($chetwodeBlue, 5%);
+				color: $white;
 			}
 		}
 	}
