--- a/src/app/components/modals/not-logged-in/NotLoggedInModal.module.scss
+++ b/src/app/components/modals/not-logged-in/NotLoggedInModal.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	padding-bottom: 1rem;
+	padding: 1rem 0;
 	justify-content: center;
 	flex: 1;
 	strong {
