--- a/src/app/components/user/login/Login.module.scss
+++ b/src/app/components/user/login/Login.module.scss
@@ -73,11 +73,21 @@
 				display: flex;
 				justify-content: center;
 				padding: 10px 0;
-
-				a {
+				flex-direction: column;
+				align-items: center;
+				gap: 5px;
+				p {
+					font-size: 14px;
+				}
+				button {
+					margin-top: 10px;
+				}
+				a,
+				.demoLink {
 					text-decoration: none;
 					font-size: 14px;
 					color: $chetwodeBlue;
+					cursor: pointer;
 					&:hover {
 						text-decoration: underline;
 					}
