--- a/src/app/components/modals/Modal.module.scss
+++ b/src/app/components/modals/Modal.module.scss
@@ -20,7 +20,8 @@
 	border: 1px solid $heather;
 	@include breakpoint(xs) {
 		min-width: 100%;
-		height: 100vh;
+		height: calc(100vh - 50px);
+		top: 0;
 	}
 	.header {
 		width: 100%;
@@ -39,7 +40,7 @@
 		}
 	}
 	.bodyContent {
-		padding: 1rem;
+		padding: 0rem 1rem;
 	}
 	.footer {
 		display: flex;
