--- a/src/app/components/modals/bet-slip/BetSlip.module.scss
+++ b/src/app/components/modals/bet-slip/BetSlip.module.scss
@@ -102,17 +102,16 @@
 			color: gray;
 			gap: 3px;
 			strong {
-				color: #10a82c;
 				font-size: 28px;
 			}
 		}
 		.text {
 			width: 100%;
-			height: 100px;
+			height: 50px;
 			margin-top: 10px;
 			textarea {
 				width: 100%;
-				height: 100px;
+				min-height: 50px;
 				border: 1px solid $heather;
 				resize: none;
 				padding: 10px;
