--- a/src/app/components/modals/bet-slip/BetSlip.module.scss
+++ b/src/app/components/modals/bet-slip/BetSlip.module.scss
@@ -7,6 +7,7 @@
 	flex: 1;
 	align-items: center;
 	gap: 3px;
+
 	span {
 		font-size: $fontSizeSm;
 	}
@@ -18,6 +19,24 @@
 	align-items: center;
 	gap: 5px;
 	margin-top: 5px;
+	.text {
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+		width: 100%;
+		padding: 1rem 0;
+		.text {
+			display: flex;
+			flex-direction: column;
+
+			span {
+				font-size: 13px;
+			}
+		}
+	}
+	@include breakpoint(xs) {
+		height: fit-content;
+	}
 	.imageWrapper {
 		border: 1px solid lightgray;
 		display: flex;
@@ -52,7 +71,7 @@
 		border-top: 1px solid lightgray;
 		border-bottom: 1px solid lightgray;
 		width: 100%;
-		margin: 1rem 0;
+		margin-top: 1rem;
 		padding: 1rem 0;
 		display: flex;
 		flex-direction: column;
@@ -103,20 +122,31 @@
 			gap: 3px;
 			strong {
 				font-size: 28px;
+				color: rgb(29, 179, 29);
 			}
 		}
-		.text {
-			width: 100%;
-			height: 50px;
-			margin-top: 10px;
-			textarea {
-				width: 100%;
-				min-height: 50px;
-				border: 1px solid $heather;
-				resize: none;
-				padding: 10px;
-				border-radius: 4px;
-			}
-		}
+		// .text {
+		// 	width: 100%;
+		// 	height: 50px;
+		// 	margin-top: 10px;
+		// 	textarea {
+		// 		width: 100%;
+		// 		min-height: 50px;
+		// 		border: 1px solid $heather;
+		// 		resize: none;
+		// 		padding: 10px;
+		// 		border-radius: 4px;
+		// 	}
+		// }
+	}
+	.advancedControls {
+		width: 100%;
+		border-bottom: 1px solid lightgray;
+		height: fit-content;
+		position: relative;
+		margin: 1rem 0;
+		display: flex;
+		flex-direction: column;
+		gap: 2rem;
 	}
 }
