--- a/src/app/components/popup/Popup.module.scss
+++ b/src/app/components/popup/Popup.module.scss
@@ -1,5 +1,6 @@
 @use '@/app/styles/variables' as *;
 @use '@/app/styles/mixins' as *;
+@use '@/app/styles/breakpoints' as *;
 
 .overlay {
 	@include overlay();
@@ -16,6 +17,11 @@
 	transition: 300ms ease-in-out;
 	position: fixed;
 	opacity: 1;
+	@include breakpoint(xs) {
+		width: 100vw;
+		height: 100vh;
+		border-radius: 0;
+	}
 	.header {
 		display: flex;
 		align-items: center;
