--- a/src/app/components/sportsbook/match-card/MatchCard.module.scss
+++ b/src/app/components/sportsbook/match-card/MatchCard.module.scss
@@ -54,8 +54,8 @@
 				gap: 10px;
 				flex: 1;
 				strong {
-					font-weight: 500;
-					font-size: $fontSizeMd;
+					font-weight: 600;
+					font-size: $fontSizeLg;
 					text-transform: uppercase;
 				}
 				span {
@@ -67,6 +67,7 @@
 			}
 			.score {
 				width: 65px;
+				height: 38px;
 			}
 			.statusLine {
 				font-size: $fontSizeXs;
@@ -77,18 +78,22 @@
 			}
 		}
 		.rightSide {
-			width: 55px;
+			min-width: 45px;
+			width: fit-content;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 			justify-content: space-evenly;
-			height: calc(100% - 25px);
+			height: 100%;
 			strong {
 				height: 50px;
 				display: flex;
 				align-items: center;
+				width: 100%;
+				justify-content: center;
 			}
-			.time {
+			.time,
+			.tvStation {
 				font-size: $fontSizeXs;
 				padding-top: 10px;
 			}
