--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -10,6 +10,12 @@
 	list-style-type: none;
 }
 
+.CreateBetPostText_createBetPostText__9oe08 {
+	.TagAndMentionInput_textarea__PS6bO textarea {
+		background-color: $mystic !important;
+	}
+}
+
 body {
 	background-color: $mystic;
 	overflow-x: hidden;
